--- a/WebContent/dashboard.css
+++ b/WebContent/dashboard.css
@@ -4,5 +4,7 @@ span.fileLink
     padding: 2px;
     position: relative;
     display: block;
+    text-decoration: none;
+    color:orangered;
     
 }
